--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Template</title>
 </head>
 <body>
-
+<h1>Hello world!</h1>
    <!-- Script --> 
    <script src="script.js"></script>
 </body>
